fix: controls scrollbar

--- a/projects/components/style/accordion.scss
+++ b/projects/components/style/accordion.scss
@@ -11,7 +11,6 @@
   &-item {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
     transition: background-color 0.2s ease-in-out;
 
     &_active {
